Fix horizontal scrollbar showing due to lack of overflow rule in video card description and button width

--- a/styles/style.css
+++ b/styles/style.css
@@ -103,6 +103,7 @@ ol {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  width: 190px;
   font-size: 30px;
   font-weight: 700;
   line-height: 30px;
@@ -112,6 +113,7 @@ ol {
 .content__video-card-description {
   font-family: 'Fira Sans Condensed', sans-serif;
   text-overflow: ellipsis;
+  overflow: hidden;
   font-size: 18px;
   font-weight: 400;
   padding: 2px;
@@ -214,7 +216,7 @@ input[type='checkbox']:focus {
 }
 
 .more-button {
-  width: 100%;
+  width: calc(100% - 4px);
   margin: 2px;
 }
 
@@ -309,7 +311,7 @@ input[type='checkbox']:focus {
 }
 
 .content__video-card-thumbnail {
-  min-width: 194px;
+  width: 194px;
   height: 103px;
   object-fit: cover;
   object-position: center;
@@ -318,6 +320,7 @@ input[type='checkbox']:focus {
 .content__video-card-description-container {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .content__card-link_current {
